weechat: update to config_version 5

--- a/modules/weechat/files/.weechat/irc.conf
+++ b/modules/weechat/files/.weechat/irc.conf
@@ -9,7 +9,7 @@
 # For more info, see: https://weechat.org/doc/weechat/quickstart/
 #
 
-config_version = 3
+config_version = 5
 
 [look]
 buffer_open_before_autojoin = on
@@ -49,6 +49,7 @@ item_nick_modes = on
 item_nick_prefix = on
 join_auto_add_chantype = off
 list_buffer = on
+list_buffer_format_export = "${name} (${users}): "${topic}""
 list_buffer_scroll_horizontal = 10
 list_buffer_sort = "~name2"
 list_buffer_topic_strip_colors = on
@@ -88,7 +89,6 @@ typing_status_self = off
 
 [color]
 input_nick = lightcyan
-item_channel_modes = default
 item_lag_counting = default
 item_lag_finished = yellow
 item_nick_modes = default
@@ -141,6 +141,7 @@ addresses = ""
 anti_flood = 2000
 autoconnect = off
 autojoin = ""
+autojoin_delay = 0
 autojoin_dynamic = off
 autoreconnect = on
 autoreconnect_delay = 10
@@ -154,7 +155,7 @@ command = ""
 command_delay = 0
 connection_timeout = 60
 default_chantypes = "#&"
-ipv6 = on
+ipv6 = auto
 local_hostname = ""
 msg_kick = ""
 msg_part = "WeeChat ${info:version}"
@@ -211,8 +212,9 @@ oftc.username = "apetresc@${sec.data.session}/oftc"
 oftc.realname
 oftc.local_hostname
 oftc.usermode
-oftc.command
 oftc.command_delay
+oftc.command
+oftc.autojoin_delay
 oftc.autojoin
 oftc.autojoin_dynamic
 oftc.autorejoin
@@ -256,8 +258,9 @@ libera.username = "apetresc@${sec.data.session}/libera"
 libera.realname
 libera.local_hostname
 libera.usermode
-libera.command
 libera.command_delay
+libera.command
+libera.autojoin_delay
 libera.autojoin
 libera.autojoin_dynamic
 libera.autorejoin
@@ -301,8 +304,9 @@ retrowithin.username = "burnerphone@${sec.data.session}/retrowithin"
 retrowithin.realname
 retrowithin.local_hostname
 retrowithin.usermode
-retrowithin.command
 retrowithin.command_delay
+retrowithin.command
+retrowithin.autojoin_delay
 retrowithin.autojoin
 retrowithin.autojoin_dynamic
 retrowithin.autorejoin
@@ -346,8 +350,9 @@ undernet.username = "burnerphone"
 undernet.realname
 undernet.local_hostname
 undernet.usermode
-undernet.command
 undernet.command_delay
+undernet.command
+undernet.autojoin_delay
 undernet.autojoin
 undernet.autojoin_dynamic
 undernet.autorejoin
@@ -391,8 +396,9 @@ myanonamouse.username = "burnerphone@${sec.data.session}/myanonamouse"
 myanonamouse.realname
 myanonamouse.local_hostname
 myanonamouse.usermode
-myanonamouse.command
 myanonamouse.command_delay
+myanonamouse.command
+myanonamouse.autojoin_delay
 myanonamouse.autojoin
 myanonamouse.autojoin_dynamic
 myanonamouse.autorejoin
@@ -436,8 +442,9 @@ scratch-network.username = "burnerphone@${sec.data.session}/scratch-network"
 scratch-network.realname
 scratch-network.local_hostname
 scratch-network.usermode
-scratch-network.command
 scratch-network.command_delay
+scratch-network.command
+scratch-network.autojoin_delay
 scratch-network.autojoin
 scratch-network.autojoin_dynamic
 scratch-network.autorejoin
@@ -481,8 +488,9 @@ synirc.username = "burnerphone@${sec.data.session}/synirc"
 synirc.realname
 synirc.local_hostname
 synirc.usermode
-synirc.command
 synirc.command_delay
+synirc.command
+synirc.autojoin_delay
 synirc.autojoin
 synirc.autojoin_dynamic
 synirc.autorejoin
@@ -526,8 +534,9 @@ freenode.username
 freenode.realname
 freenode.local_hostname
 freenode.usermode
-freenode.command
 freenode.command_delay
+freenode.command
+freenode.autojoin_delay
 freenode.autojoin
 freenode.autojoin_dynamic
 freenode.autorejoin
