fontconfig: switch to xos4 Terminus font
Some drama about support being dropped for one specific bitmap font
format so we switch to a different one.

--- a/modules/fontconfig/files/.config/fontconfig/fonts.conf
+++ b/modules/fontconfig/files/.config/fontconfig/fonts.conf
@@ -10,7 +10,7 @@
    <string>monospace</string>
   </test>
   <edit binding="strong" mode="prepend" name="family">
-   <string>Terminus</string>
+   <string>xos4 Terminus</string>
   </edit>
  </match>
 </fontconfig>
