--- a/modules/i3/files/.config/i3/config
+++ b/modules/i3/files/.config/i3/config
@@ -71,7 +71,9 @@ bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+space exec --no-startup-id "rofi -m -4 -show drun"
+#bindsym $mod+space exec --no-startup-id "rofi -m -4 -show drun"
+#bindsym $mod+space exec --no-startup-id dmenu_run
+bindsym $mod+space exec --no-startup-id j4-dmenu-desktop --i3-ipc
 
 # start window switcher
 bindsym $mod+Tab exec --no-startup-id "rofi -show window"
