--- a/modules/editorconfig/files/.editorconfig
+++ b/modules/editorconfig/files/.editorconfig
@@ -8,6 +8,7 @@ charset = utf-8
 
 [*.py]
 indent_size = 4
+max_line_length = 88
 
 [*.java]
 indent_size = 4
@@ -18,6 +19,9 @@ indent_size = 4
 
 [*.rs]
 indent_size = 4
+
+[*.lua]
+max_line_length = 80
 
 [*.csv]
 #insert_final_newline = false
