weechat: add some networks, update some settings

--- a/modules/weechat/files/.weechat/weechat.conf
+++ b/modules/weechat/files/.weechat/weechat.conf
@@ -367,6 +367,8 @@ title.type = window
 [notify]
 core.weechat = all
 irc.server.freenode = all
+irc.server.igloo = all
+irc.server.iglooirc = all
 irc.server.irc.retrowithin.com = all
 irc.server.irc.retrowithin.com:7777 = all
 irc.server.ircnow.org = all
@@ -376,11 +378,13 @@ irc.server.myanonamouse = all
 irc.server.oftc = all
 irc.server.retrowithin = all
 irc.server.scratch-network = all
+irc.server.snoonet = all
 irc.server.synirc = all
 irc.server.undernet = all
 
 [filter]
 irc_smart = on;*;irc_smart_filter;*
+joinspam = on;*;nick_apetresc+irc_join;*
 
 [key]
 backspace = "/input delete_previous_char"
