--- a/modules/weechat/files/.weechat/irc.conf
+++ b/modules/weechat/files/.weechat/irc.conf
@@ -32,7 +32,7 @@ display_host_join_local = on
 display_host_notice = on
 display_host_quit = on
 display_host_wallops = on
-display_join_message = "329,332,333,366"
+display_join_message = ""
 display_old_topic = on
 display_pv_away_once = on
 display_pv_back = on
@@ -62,6 +62,7 @@ nick_mode = prefix
 nick_mode_empty = off
 nicks_hide_password = "nickserv"
 notice_as_pv = auto
+notice_nicks_disable_notify = "chanserv,nickserv"
 notice_welcome_redirect = on
 notice_welcome_tags = ""
 notify_tags_ison = "notify_message"
@@ -553,3 +554,95 @@ freenode.split_msg_max_length
 freenode.charset_message
 freenode.default_chantypes
 freenode.registered_mode
+iglooirc.addresses = "znc.apetre.sc/12112"
+iglooirc.proxy
+iglooirc.ipv6
+iglooirc.tls = off
+iglooirc.tls_cert
+iglooirc.tls_password
+iglooirc.tls_priorities
+iglooirc.tls_dhkey_size
+iglooirc.tls_fingerprint
+iglooirc.tls_verify
+iglooirc.password = "${sec.data.zncpass}"
+iglooirc.capabilities
+iglooirc.sasl_mechanism
+iglooirc.sasl_username
+iglooirc.sasl_password
+iglooirc.sasl_key
+iglooirc.sasl_timeout
+iglooirc.sasl_fail
+iglooirc.autoconnect
+iglooirc.autoreconnect
+iglooirc.autoreconnect_delay
+iglooirc.nicks
+iglooirc.nicks_alternate
+iglooirc.username = "apetresc@${sec.data.session}/iglooirc"
+iglooirc.realname
+iglooirc.local_hostname
+iglooirc.usermode
+iglooirc.command_delay
+iglooirc.command
+iglooirc.autojoin_delay
+iglooirc.autojoin
+iglooirc.autojoin_dynamic
+iglooirc.autorejoin
+iglooirc.autorejoin_delay
+iglooirc.connection_timeout
+iglooirc.anti_flood
+iglooirc.away_check
+iglooirc.away_check_max_nicks
+iglooirc.msg_kick
+iglooirc.msg_part
+iglooirc.msg_quit
+iglooirc.notify
+iglooirc.split_msg_max_length
+iglooirc.charset_message
+iglooirc.default_chantypes
+iglooirc.registered_mode
+snoonet.addresses = "znc.apetre.sc/12112"
+snoonet.proxy
+snoonet.ipv6
+snoonet.tls = off
+snoonet.tls_cert
+snoonet.tls_password
+snoonet.tls_priorities
+snoonet.tls_dhkey_size
+snoonet.tls_fingerprint
+snoonet.tls_verify
+snoonet.password = "${sec.data.zncpass}"
+snoonet.capabilities
+snoonet.sasl_mechanism
+snoonet.sasl_username
+snoonet.sasl_password
+snoonet.sasl_key
+snoonet.sasl_timeout
+snoonet.sasl_fail
+snoonet.autoconnect
+snoonet.autoreconnect
+snoonet.autoreconnect_delay
+snoonet.nicks
+snoonet.nicks_alternate
+snoonet.username = "apetresc@${sec.data.session}/snoonet"
+snoonet.realname
+snoonet.local_hostname
+snoonet.usermode
+snoonet.command_delay
+snoonet.command
+snoonet.autojoin_delay
+snoonet.autojoin
+snoonet.autojoin_dynamic
+snoonet.autorejoin
+snoonet.autorejoin_delay
+snoonet.connection_timeout
+snoonet.anti_flood
+snoonet.away_check
+snoonet.away_check_max_nicks
+snoonet.msg_kick
+snoonet.msg_part
+snoonet.msg_quit
+snoonet.notify
+snoonet.split_msg_max_length
+snoonet.charset_message
+snoonet.default_chantypes
+snoonet.registered_mode
