--- a/modules/weechat/files/.weechat/logger.conf
+++ b/modules/weechat/files/.weechat/logger.conf
@@ -10,7 +10,7 @@
 #
 
 [look]
-backlog = 20
+backlog = 200
 backlog_conditions = ""
 
 [color]
@@ -18,7 +18,7 @@ backlog_end = default
 backlog_line = default
 
 [file]
-auto_log = off
+auto_log = on
 color_lines = off
 flush_delay = 120
 fsync = off
@@ -28,7 +28,7 @@ mask = "$plugin.$name.weechatlog"
 name_lower_case = on
 nick_prefix = ""
 nick_suffix = ""
-path = "%h/logs/"
+path = "${weechat_data_dir}/logs"
 replacement_char = "_"
 rotation_compression_level = 20
 rotation_compression_type = none
@@ -36,5 +36,6 @@ rotation_size_max = "0"
 time_format = "%Y-%m-%d %H:%M:%S"
 
 [level]
+irc = 3
 
 [mask]
