weechat: add rizon network

--- a/modules/weechat/files/.weechat/irc.conf
+++ b/modules/weechat/files/.weechat/irc.conf
@@ -646,3 +646,49 @@ snoonet.split_msg_max_length
 snoonet.charset_message
 snoonet.default_chantypes
 snoonet.registered_mode
+rizon.addresses = "znc.apetre.sc/12112"
+rizon.proxy
+rizon.ipv6
+rizon.tls = off
+rizon.tls_cert
+rizon.tls_password
+rizon.tls_priorities
+rizon.tls_dhkey_size
+rizon.tls_fingerprint
+rizon.tls_verify
+rizon.password = "${sec.data.zncpass}"
+rizon.capabilities
+rizon.sasl_mechanism
+rizon.sasl_username
+rizon.sasl_password
+rizon.sasl_key
+rizon.sasl_timeout
+rizon.sasl_fail
+rizon.autoconnect
+rizon.autoreconnect
+rizon.autoreconnect_delay
+rizon.nicks
+rizon.nicks_alternate
+rizon.username = "apetresc@${sec.data.session}/rizon"
+rizon.realname
+rizon.local_hostname
+rizon.usermode
+rizon.command_delay
+rizon.command
+rizon.autojoin_delay
+rizon.autojoin
+rizon.autojoin_dynamic
+rizon.autorejoin
+rizon.autorejoin_delay
+rizon.connection_timeout
+rizon.anti_flood
+rizon.away_check
+rizon.away_check_max_nicks
+rizon.msg_kick
+rizon.msg_part
+rizon.msg_quit
+rizon.notify
+rizon.split_msg_max_length
+rizon.charset_message
+rizon.default_chantypes
+rizon.registered_mode
