--- a/modules/weechat/files/.weechat/weechat.conf
+++ b/modules/weechat/files/.weechat/weechat.conf
@@ -377,6 +377,7 @@ irc.server.libera.chat = all
 irc.server.myanonamouse = all
 irc.server.oftc = all
 irc.server.retrowithin = all
+irc.server.rizon = all
 irc.server.scratch-network = all
 irc.server.snoonet = all
 irc.server.synirc = all
