weechat: add mobileread network

--- a/modules/weechat/files/.weechat/irc.conf
+++ b/modules/weechat/files/.weechat/irc.conf
@@ -692,3 +692,49 @@ rizon.split_msg_max_length
 rizon.charset_message
 rizon.default_chantypes
 rizon.registered_mode
+mobileread.addresses = "znc.apetre.sc/12112"
+mobileread.proxy
+mobileread.ipv6
+mobileread.tls = off
+mobileread.tls_cert
+mobileread.tls_password
+mobileread.tls_priorities
+mobileread.tls_dhkey_size
+mobileread.tls_fingerprint
+mobileread.tls_verify
+mobileread.password = "${sec.data.zncpass}"
+mobileread.capabilities
+mobileread.sasl_mechanism
+mobileread.sasl_username
+mobileread.sasl_password
+mobileread.sasl_key
+mobileread.sasl_timeout
+mobileread.sasl_fail
+mobileread.autoconnect
+mobileread.autoreconnect
+mobileread.autoreconnect_delay
+mobileread.nicks
+mobileread.nicks_alternate
+mobileread.username = "apetresc@${sec.data.session}/mobileread"
+mobileread.realname
+mobileread.local_hostname
+mobileread.usermode
+mobileread.command_delay
+mobileread.command
+mobileread.autojoin_delay
+mobileread.autojoin
+mobileread.autojoin_dynamic
+mobileread.autorejoin
+mobileread.autorejoin_delay
+mobileread.connection_timeout
+mobileread.anti_flood
+mobileread.away_check
+mobileread.away_check_max_nicks
+mobileread.msg_kick
+mobileread.msg_part
+mobileread.msg_quit
+mobileread.notify
+mobileread.split_msg_max_length
+mobileread.charset_message
+mobileread.default_chantypes
+mobileread.registered_mode
