--- a/modules/weechat/files/.weechat/weechat.conf
+++ b/modules/weechat/files/.weechat/weechat.conf
@@ -374,6 +374,7 @@ irc.server.irc.retrowithin.com:7777 = all
 irc.server.ircnow.org = all
 irc.server.libera = all
 irc.server.libera.chat = all
+irc.server.mobileread = all
 irc.server.myanonamouse = all
 irc.server.oftc = all
 irc.server.retrowithin = all
