weechat: add local rizon password

--- a/modules/weechat/files/.weechat/irc.conf
+++ b/modules/weechat/files/.weechat/irc.conf
@@ -334,7 +334,7 @@ undernet.tls_priorities
 undernet.tls_dhkey_size
 undernet.tls_fingerprint
 undernet.tls_verify
-undernet.password
+undernet.password = "-!+x burnerphone LPQErwYR"
 undernet.capabilities
 undernet.sasl_mechanism
 undernet.sasl_username
