--- a/modules/tmux/files/.tmux.conf
+++ b/modules/tmux/files/.tmux.conf
@@ -31,8 +31,9 @@ bind-key -n C-S-Tab previous-window
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+is_claude="test '#{pane_current_command}' = 'node'"
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-j if-shell "$is_vim || $is_claude" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 # bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
