weechat: add twitch

--- a/modules/weechat/files/.weechat/irc.conf
+++ b/modules/weechat/files/.weechat/irc.conf
@@ -738,3 +738,49 @@ mobileread.split_msg_max_length
 mobileread.charset_message
 mobileread.default_chantypes
 mobileread.registered_mode
+twitch.addresses = "irc.twitch.tv/6667"
+twitch.proxy
+twitch.ipv6
+twitch.tls
+twitch.tls_cert
+twitch.tls_password
+twitch.tls_priorities
+twitch.tls_dhkey_size
+twitch.tls_fingerprint
+twitch.tls_verify
+twitch.password = "oauth:8wr1rs09adqfb0qm2nk23b2qfy9bfi"
+twitch.capabilities
+twitch.sasl_mechanism
+twitch.sasl_username
+twitch.sasl_password
+twitch.sasl_key
+twitch.sasl_timeout
+twitch.sasl_fail
+twitch.autoconnect
+twitch.autoreconnect
+twitch.autoreconnect_delay
+twitch.nicks = "apetresc"
+twitch.nicks_alternate
+twitch.username = "apetresc"
+twitch.realname
+twitch.local_hostname
+twitch.usermode
+twitch.command_delay
+twitch.command
+twitch.autojoin_delay
+twitch.autojoin
+twitch.autojoin_dynamic
+twitch.autorejoin
+twitch.autorejoin_delay
+twitch.connection_timeout
+twitch.anti_flood
+twitch.away_check
+twitch.away_check_max_nicks
+twitch.msg_kick
+twitch.msg_part
+twitch.msg_quit
+twitch.notify
+twitch.split_msg_max_length
+twitch.charset_message
+twitch.default_chantypes
+twitch.registered_mode
