--- a/modules/weechat/files/.weechat/weechat.conf
+++ b/modules/weechat/files/.weechat/weechat.conf
@@ -234,6 +234,7 @@ nick_first_only = off
 nick_ignore_chars = "[]`_-^"
 nick_ignore_words = ""
 partial_completion_alert = on
+partial_completion_auto_expand = on
 partial_completion_command = off
 partial_completion_command_arg = off
 partial_completion_count = on
@@ -385,6 +386,7 @@ irc.server.rizon = all
 irc.server.scratch-network = all
 irc.server.snoonet = all
 irc.server.synirc = all
+irc.server.twitch = all
 irc.server.undernet = all
 
 [filter]
