fontconfig: use Terminus (TTF)

--- a/modules/fontconfig/files/.config/fontconfig/fonts.conf
+++ b/modules/fontconfig/files/.config/fontconfig/fonts.conf
@@ -10,7 +10,7 @@
    <string>monospace</string>
   </test>
   <edit binding="strong" mode="prepend" name="family">
-   <string>xos4 Terminus</string>
+   <string>Terminus (TTF)</string>
   </edit>
  </match>
 </fontconfig>
